# password-manager

./: README.md  docker-compose.local.yml
.github/workflows/: aws_deploy.yml  backend-test.yml  tests.yml
aws/: task-definition.json
dockerfiles/: backend.Dockerfile  frontend.Dockerfile
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
frontend/src/api/: api.js  authentication.js  password.js  setup2fa.js
frontend/src/components/: RequireAuthLayout.js
frontend/src/hooks/: useAuth.js  (+1 more)
nginx/: default.conf.template  nginx.conf
rust-server/: .gitignore  Cargo.toml  build.rs
rust-server/migrations/2023-02-22-151222_create_users/: up.sql
rust-server/migrations/2023-03-19-112053_create_users_oauth/: down.sql  up.sql
rust-server/migrations/2023-03-26-175902_add_totp_info_to_users/: down.sql  up.sql
rust-server/migrations/2023-04-08-052750_create_stored_passwords/: down.sql  up.sql
rust-server/migrations/2023-04-11-161811_add_token_revoke_timestamp/: down.sql  up.sql
rust-server/src/: config.rs  database.rs  handlers.rs  main.rs  models.rs  repository.rs  utils.rs
rust-server/src/handlers/: authentication.rs  passwords.rs  tests.rs
rust-server/src/models/: schema.rs  stored_passwords.rs  users.rs  users_oauth.rs
rust-server/src/repository/: jwt_repository.rs  stored_password_repository.rs  user_repository.rs
rust-server/src/utils/: csrf_utils.rs  jwt_utils.rs  totp_utils.rs
scripts/: frontend_setup.sh  local_deploy.ps1  local_deploy.sh  local_setup.ps1  local_setup.sh
(+14 files in other folders)
