[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
diesel = { version = "2.0.0", features = ["mysql", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.2.0"
chrono = "0.4.23"
futures-util = "0.3.27"
rust-argon2 = "1.0.0"
rand = "0.8.5"
reqwest = {version = "0.11.14", features = ["json"]}
